<resources>
    <string name="app_name">EpidemicDataCnR</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_patient_registration">PatientRegistration</string>
    <string name="name_with_initials"><font size="16">Name with initials</font></string>
    <string name="province"><font size="16">Province</font></string>
    <string name="district"><font size="16">District</font></string>
    <string name="area"><font size="16">Area</font></string>
    <string name="doctor_s_name_with_initials"><font size="16">Doctor\'s name with initials</font></string>
    <string name="enter_child_if_under_18"><font size="16">Enter \'child\' if under 18</font></string>

</resources>
