<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="15dp"
    android:paddingRight="5dp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- to input name -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Name"
                    android:id="@+id/pRegNameLabel"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pRegNameET"
                    android:ems="14"
                    android:layout_marginTop="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/name_with_initials" />


                <!-- to input national ID -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="National ID"
                    android:id="@+id/pRegNatIdLabel"
                    android:layout_marginTop="90dp"
                    android:padding="10dp"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pRegNatIdET"
                    android:ems="10"
                    android:layout_alignBaseline="@+id/pRegNatIdLabel"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />


                <!-- to input date of birth -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Date of birth"
                    android:id="@+id/pRegDOBLabel"
                    android:padding="10dp"
                    android:layout_marginTop="130dp"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pRegDOBET"
                    android:ems="10"
                    android:layout_alignBaseline="@+id/pRegDOBLabel"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <!-- to input disease -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Illness"
                    android:id="@+id/pRegDiseaseLabel"
                    android:padding="10dp"
                    android:layout_marginTop="170dp"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pRegDiseaseET"
                    android:ems="10"
                    android:layout_alignBaseline="@+id/pRegDiseaseLabel"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <!-- to input condition -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Condition"
                    android:id="@+id/pRegConditionLabel"
                    android:padding="10dp"
                    android:layout_marginTop="210dp"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pRegConditionET"
                    android:ems="10"
                    android:layout_alignBaseline="@+id/pRegConditionLabel"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <!-- to input region -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Region"
                    android:id="@+id/pRegRegionLabel"
                    android:layout_marginTop="250dp"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:layout_alignParentStart="true"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/pRegProvinceET"
                    android:layout_alignBaseline="@+id/pRegRegionLabel"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/province" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/pRegDistrictET"
                    android:layout_marginTop="290dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/district" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/pRegAreaET"
                    android:layout_marginTop="330dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/area" />

                <!-- to input Doctor's name -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Doctor's name"
                    android:id="@+id/pRegDoctorLabel"
                    android:layout_marginTop="370dp"
                    android:padding="10dp"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pRegDoctorET"
                    android:ems="14"
                    android:layout_marginTop="400dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/doctor_s_name_with_initials" />

                <!-- to input hospital name -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Hospital name"
                    android:id="@+id/pRegHospitalLabel"
                    android:layout_marginTop="450dp"
                    android:padding="10dp"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pRegHospitalET"
                    android:ems="10"
                    android:layout_alignBaseline="@+id/pRegHospitalLabel"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />


                <!-- to input password -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Password"
                    android:id="@+id/pRegPasswordLabel"
                    android:layout_marginTop="490dp"
                    android:padding="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="8"
                    android:id="@+id/pRegPasswordET"
                    android:layout_alignBaseline="@+id/pRegPasswordLabel"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <!-- to confirm password -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Confirm password"
                    android:id="@+id/pRegConfirmPasswordLabel"
                    android:layout_marginTop="530dp"
                    android:padding="10dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="8"
                    android:id="@+id/pRegConfirmET"
                    android:layout_alignBaseline="@+id/pRegConfirmPasswordLabel"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Register"
                    android:id="@+id/pRegRegisterButton"
                    android:layout_marginTop="580dp"
                    android:layout_marginRight="100dp"
                    android:layout_centerHorizontal="true" />


            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
