<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="15dp"
    android:paddingRight="5dp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- to input name -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Name"
                    android:id="@+id/insertNameLabel"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/insertNameET"
                    android:ems="14"
                    android:layout_marginTop="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/name_with_initials" />

                <!-- to input national ID -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="National ID"
                    android:id="@+id/insertNatIdLabel"
                    android:layout_marginTop="90dp"
                    android:padding="10dp"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/insertNatIdET"
                    android:ems="10"
                    android:layout_alignBaseline="@+id/insertNatIdLabel"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />


                <!-- to input date of birth -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Date of birth"
                    android:id="@+id/insertDOBLabel"
                    android:padding="10dp"
                    android:layout_marginTop="130dp"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/insertDOBET"
                    android:ems="10"
                    android:layout_alignBaseline="@+id/insertDOBLabel"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <!-- to input disease -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Illness"
                    android:id="@+id/insertDiseaseLabel"
                    android:padding="10dp"
                    android:layout_marginTop="170dp"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/insertDiseaseET"
                    android:ems="10"
                    android:layout_alignBaseline="@+id/insertDiseaseLabel"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <!-- to input condition -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Condition"
                    android:id="@+id/insertConditionLabel"
                    android:padding="10dp"
                    android:layout_marginTop="210dp"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/insertConditionET"
                    android:ems="10"
                    android:layout_alignBaseline="@+id/insertConditionLabel"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <RelativeLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- to input region -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Province"
                    android:id="@+id/insertProvLabel"
                    android:layout_marginTop="50dp"
                    android:padding="10dp"
                    android:textSize="16dp" />

                <Spinner
                    android:layout_width="230dp"
                    android:layout_height="35dp"
                    android:id="@+id/insertProvinceSpinner"
                    android:layout_marginTop="53dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="District"
                    android:id="@+id/insertDistLabel"
                    android:layout_marginTop="90dp"
                    android:padding="10dp"
                    android:textSize="16dp" />

                <Spinner
                    android:layout_width="230dp"
                    android:padding="0dp"
                    android:layout_height="40dp"
                    android:id="@+id/insertDistrictSpinner"
                    android:layout_marginTop="93dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="9"
                    android:id="@+id/insertAreaET"
                    android:layout_marginTop="130dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/area" />
            </RelativeLayout>

            <RelativeLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- to input Doctor's name -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Doctor's name"
                    android:id="@+id/insertDoctorLabel"
                    android:layout_marginTop="50dp"
                    android:padding="10dp"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/insertDoctorET"
                    android:ems="14"
                    android:layout_marginTop="80dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:hint="@string/doctor_s_name_with_initials" />

                <!-- to input hospital name -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Hospital name"
                    android:id="@+id/insertHospitalLabel"
                    android:layout_marginTop="130dp"
                    android:padding="10dp"
                    android:textSize="16dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/insertHospitalET"
                    android:ems="14"
                    android:layout_marginTop="150dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Insert Data"
                    android:id="@+id/insertDataButton"
                    android:layout_marginTop="230dp"
                    android:layout_marginRight="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp" />


            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
